syntax = 'proto3';
package com.linkedin.venice.protocols;

option java_multiple_files = true;

service VeniceIngestionMonitorService {
  rpc monitorIngestion(IngestionMonitorRequest) returns (stream IngestionMonitorResponse) {}
}

message IngestionMonitorRequest {
  string version_topic = 1;
  int32 partition = 2;
  int32 interval_ms = 3; // default 5000, minimum 1000
}

message IngestionMonitorResponse {
  int64 timestamp_ms = 1;
  string leader_follower_state = 2;
  bool is_hybrid = 3;

  // Consumer metrics
  double records_polled_per_sec = 4;
  double bytes_polled_per_sec = 5;

  // Reserved for future per-source breakdown
  reserved 6;

  // Processing latency
  double consumed_record_e2e_processing_latency_avg_ms = 7;
  double leader_preprocessing_latency_avg_ms = 8;

  // Produce latency (leader)
  double leader_produce_latency_avg_ms = 9;
  double leader_producer_completion_latency_avg_ms = 10;
  double leader_producer_callback_latency_avg_ms = 11;

  // Leader output
  double leader_records_produced_per_sec = 12;
  double leader_bytes_produced_per_sec = 13;

  // Storage latency
  double storage_engine_put_latency_avg_ms = 14;

  // RT lookup latency (leader)
  double leader_value_bytes_lookup_latency_avg_ms = 15;
  double leader_rmd_lookup_latency_avg_ms = 16;

  // Timing
  int64 elapsed_time_since_last_record_ms = 17;
}

